# DevOps_lab2

./: Dockerfile  HTTP_Server.cpp  HTTP_Server.h  Makefile  Makefile.am  Makefile.in  autoDeploy.sh  config.status  configure  configure.ac  configure~  deb.deb  images-architecture.yml  main.cpp  main_Server.cpp  program  program.pc.in  scriptA.sh  scriptB.sh  server  suite.cpp  suite.h  test.cpp  test_server  update_Dockerfile.yml
.deps/: HTTP_Server.Po  main.Po  suite.Po
.github/workflows/: asynchronous_calls.yml  autoDeploy_check.yml  automake_ci.yml  ci.yml  deb_package.yml  docker_test.yml  images-architecture.yml  test-scriptA.yml  test_ci.yml  test_scriptB.yml  test_scripts.yml  test_time.yml  update_Dockerfile.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
data/: data.txt
deb/DEBIAN/: control
program/DEBIAN/: control
tests/: main_test  main_test.cpp
